--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -2,11 +2,6 @@ name: Publish documentation
 on:
   workflow_dispatch: ~
 
-permissions:
-  contents: read
-  pages: write      # to deploy to Pages
-  id-token: write   # to verify the deployment originates from an appropriate source
-
 env:
   DEVBOX_VERSION: 0.14.0
 
@@ -19,6 +14,8 @@ concurrency:
 jobs:
   build_docs:
     name: Build
+    permissions:
+      pages: write
     runs-on: ubuntu-latest
 
     # Deploy to the github-pages environment
@@ -27,7 +24,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+        with:
+          persist-credentials: false
 
       - name: Install devbox
         uses: jetify-com/devbox-install-action@734088efddca47cf44ff8a09289c6d0e51b73218 #v0.12.0
@@ -46,6 +46,9 @@ jobs:
 
   publish_documentation:
     needs: build_docs
+    permissions:
+      pages: write
+      id-token: write
 
     name: Publish
     runs-on: ubuntu-latest
