--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,11 +4,6 @@ on:
   push:
     tags: ["v*"]
 
-permissions:
-  contents: write # to push new branches
-  pages: write # to deploy to Pages
-  id-token: write # to verify the deployment originates from an appropriate source
-
 env:
   DEVBOX_VERSION: 0.14.0
 
@@ -22,12 +17,16 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # to push new branches
+      id-token: write # to verify the deployment originates from an appropriate source
 
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Restore go vendors
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 #v4.2.3
@@ -62,6 +61,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+        with:
+          persist-credentials: false
 
       - name: Install devbox
         uses: jetify-com/devbox-install-action@734088efddca47cf44ff8a09289c6d0e51b73218 #v0.12.0
@@ -80,7 +81,9 @@ jobs:
 
   publish_documentation:
     needs: [build_docs, release]
-
+    permissions:
+      pages: write
+      id-token: write
     name: Publish documentation
     runs-on: ubuntu-latest
 
